--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,28 +1,41 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "description": "frontend",
-  "scripts": {
-    "start": "",
-    "start:dev": "",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "pnpm exec prettier src/ --write",
-    "pre-commit": "lint-staged"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "lint-staged": "^14.0.1",
-    "prettier": "3.0.3"
-  },
-  "lint-staged": {
-    "*.js": [
-      "npm run lint:fix",
-      "npm run format"
-    ]
-  }
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"start": "",
+		"start:dev": "",
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"format": "pnpm exec prettier src/ --write",
+		"pre-commit": "lint-staged",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@vitejs/plugin-react": "^4.0.3",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"vite": "^4.4.5",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"lint-staged": "^14.0.1",
+		"prettier": "3.0.3"
+	},
+	"lint-staged": {
+		"*.js": [
+			"npm run lint:fix",
+			"npm run format"
+		]
+	}
 }
